<resources>
    <string name="app_name">Calculator</string>
    <string name="turn_off">OFF</string>
    <string name="square_root">√x</string>
    <string name="find_square">x²</string>
    <string name="turn_on">ON</string>
    <string name="find_log">log</string>
    <string name="raise_power">xª</string>
    <string name="root">ⁿ√x</string>
    <string name="factorial">x!</string>
    <string name="tangent">tan</string>
    <string name="sine">sin</string>
    <string name="cosine">cos</string>
    <string name="hypotenus">hyp</string>
    <string name="delete">del</string>
    <string name="right_bracket">)</string>
    <string name="left_bracket">(</string>
    <string name="negative">(—)</string>
    <string name="minus">―</string>
    <string name="plus">+</string>
    <string name="pi">π</string>
    <string name="nine">9</string>
    <string name="eight">8</string>
    <string name="seven">7</string>
    <string name="divide">÷</string>
    <string name="multiply">×</string>
    <string name="percent">%</string>
    <string name="six">6</string>
    <string name="five">5</string>
    <string name="four">4</string>
    <string name="exponential">exp</string>
    <string name="equal_to">=</string>
    <string name="answer">ans</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="one">1</string>
    <string name="anti_log">10˟</string>
    <string name="inverse">xˉ¹</string>
    <string name="absolute_value">|x|</string>
    <string name="negate">±</string>
    <string name="dot">•</string>
    <string name="zero">0</string>


</resources>
